# reddit-puzzle-system-design

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.loadgen  README.md  build_output.txt  build_output_v2.txt  docker-compose.mac.yml  docker-compose.yml  hetzner_setup.md  run_optimized.sh  visualize_load.py
ansible/: .gitignore  README.md  benchmark.yml  inventory.example.ini  site.yml  verify.yml
ansible/host_vars/: canvas-client1.yml  canvas-client2.yml  canvas-server.yml
ansible/roles/benchmark_collect/tasks/: main.yml
ansible/roles/benchmark_monitor/files/: monitor.sh
ansible/roles/benchmark_monitor/tasks/: start.yml  stop.yml
ansible/roles/benchmark_run/tasks/: start_clients.yml  start_server.yml  stop.yml
ansible/roles/firewall/tasks/: main.yml
ansible/roles/kernel_tune/handlers/: main.yml
ansible/roles/kernel_tune/tasks/: main.yml
ansible/roles/kernel_tune/templates/: canvas-sysctl.conf.j2
ansible/roles/pin_irqs/tasks/: main.yml
ansible/roles/pin_irqs/templates/: pin_irqs.sh.j2
ansible/roles/vlan/handlers/: main.yml
ansible/roles/vlan/tasks/: main.yml
ansible/roles/vlan/templates/: vswitch.yaml.j2
bench/: plot_results.py  requirements.txt
client/: Cargo.toml
client/src/: main.rs  metrics.rs  tls.rs
docs/: hetzner_setup.md
scripts/: restore_defaults.sh  run_optimized.sh
server/: Cargo.toml
server/src/: broadcast.rs  canvas.rs  const_settings.rs  cooldown.rs  main.rs  master.rs  spsc.rs  time.rs  timing_wheel.rs  transport.rs  worker.rs
