[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
quinn = "0.10.2"
rustls = { version = "0.21.7", features = ["quic", "dangerous_configuration"] }
bytes = "1.5"

[features]
debug-logs = []
