[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
core_affinity = "0.8.3"
libc = "0.2.182"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.11"
quiche = "0.25.0"
rand = "0.8"
rcgen = "0.13.1"
rustc-hash = "2.1.1"
socket2 = "0.6.2"

[features]
debug-logs = []
